5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4072/executions/1621_2920.log
== TEST (2019-04-01 18:41:27) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
c1 = (26,90)
sn = (3,50)
sm = (3,0)
total = (c1 + sn + sm)
print(total)
-- OUTPUT:
(26, 90, 3, 50, 3, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:08) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
c1 = (26.90)
sn = (3.50)
sm = (3.0)
total = (c1 + sn + sm)
print(total)
-- OUTPUT:
33.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:37) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(total)
-- OUTPUT:
33.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:42:51) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(total)
-- EXECUTION TIME:
0.140537
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
33.4
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
33.4
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
33.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:10) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
from math import * 
1 kg = 1000 gramas
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(round(total, 2)
-- ERROR:
File "XXXX", line 5
    1 kg = 1000 gramas
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:45:49) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
from math import * 
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(round(total, 2)
-- ERROR:
File "XXXX", line 10
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:46:06) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
from math import * 
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(round(total, 2)
-- ERROR:
File "XXXX", line 10
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:47:18) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
# cada 1 kg equivale a 1000 gramas
from math import * 
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(round(total, 2)

-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:55) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
# cada 1 kg equivale a 1000 gramas
from math import * 
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(round(total, 2)
-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:08) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))
from math import * 
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(round(total, 2)
-- ERROR:
File "XXXX", line 10
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:21) 
-- CODE:
comidas = (float(input("quantas gramas possui seu prato? ")))
bebidas = (int(input("quantas bebidas? "))) 
sobremesa = (int(input("quantas sobremesas?")))

from math import * 
c1 = (26.9)
sn = (3.5)
sm = (3.0)
total = (c1 + sn + sm)
print(round(total, 2)
-- ERROR:
File "XXXX", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
